--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -5,10 +5,11 @@ CFLAGS := -Wall -Wextra -Werror $(STD)
 RM := rm -rf 
 SRC := $(wildcard *.cpp)
 OBJ := $(SRC:%.cpp=%.o)
-all: $(OBJ)
+all: $(TARGET)
+$(TARGET): $(OBJ)
 	$(CXX) $(CFLAGS) $(OBJ) -o $(TARGET)
 %.o: %.cpp
-	$(CXX) $(CFLAGS) -c $^ -o $@
+	$(CXX) $(CFLAGS) -c $< -o $@
 clean:
 	$(RM) $(OBJ)
 fclean: clean
