--- a/ex06/Makefile
+++ b/ex06/Makefile
@@ -1,17 +1,18 @@
-TARGET := unnecessaryViolence
+TARGET := harlFilter
 CXX := c++
 STD := -std=c++98
+RM := rm -rf
 CFLAGS := -Wall -Wextra -Werror $(STD)
-RM := rm -rf 
 SRC := $(wildcard *.cpp)
 OBJ := $(SRC:%.cpp=%.o)
-all: $(OBJ)
+all: $(TARGET)
+$(TARGET): $(OBJ)
 	$(CXX) $(CFLAGS) $(OBJ) -o $(TARGET)
 %.o: %.cpp
-	$(CXX) $(CFLAGS) -c $^ -o $@
+	$(CXX) $(CFLAGS) -c $< -o $@
 clean:
 	$(RM) $(OBJ)
 fclean: clean
 	$(RM) $(TARGET)
 re: fclean all
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re 
